--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -4,7 +4,7 @@ on:
     branches:
     - main
   schedule:
-    - cron: "55 08,20 * * *"
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 jobs:
   job1:
